@@ -99,6 +99,9 @@
                         <a id="steam" onclick="toggle_account(this)">Steam</a>
                     </li>
                     <li class="entry">
+                        <a id="telegram" onclick="toggle_account(this)">Telegram</a>
+                    </li>
+                    <li class="entry">
                         <a id="tumblr" onclick="toggle_account(this)">Tumblr</a>
                     </li>
                     <li class="entry">
