@@ -1,5 +1,7 @@
 UNRELEASED:
 
+- Added 'Telegram' to account list.
+
 2022-04-19:
 
 - Added 'Hardlimit' accounts to the Accounts page.
